# deploy-kit

./: .gitignore  .sops.yaml.example  CLAUDE.md  README.md  justfile  justfile.include  pyproject.toml
docs/: existing-project-guide.md  new-project-guide.md
src/deploy_kit/: __init__.py  cli.py  config.py  docker.py  init.py  sops.py  utils.py
src/deploy_kit/backends/: __init__.py  compose.py  portainer.py
src/deploy_kit/scripts/: __init__.py  docker_build.sh  docker_push.sh  docker_save.sh  ssh_check_hash.sh  ssh_remote_deploy.sh  ssh_remote_teardown.sh  ssh_transfer.sh
templates/config/: deploy-kit.toml.example
templates/docker/: docker-compose.dev.yml.template  docker-compose.prod.yml.template
tests/: test_hash_transfer.py
tests/fixtures/: Dockerfile  pyproject.toml
