[project]
name = "deploy-kit"
version = "0.2.0"
description = "Reusable Docker deployment toolkit with Portainer API and docker-compose support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
deploy-kit = "deploy_kit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
